# cal_vgp

./: CNAME  README.md  cal_vgp_site_simple  code_to_clipboard.py  index.html
scraper/: .env.example  .gitignore  Makefile  README.md  analysis_examples.py  ascii_website.py  auto_enhanced_ballot_measures.html.REMOVED.git-id  ballot_measures_api.py  ca_ballot_measures.csv  ceda_integration.py  ceda_parser_comprehensive.py  check_downloads.py  clean_website.py  cleanup_post_reorg.py  complete_fix.py  diagnose_issue.py  duplicate_diagnosis.py  enhanced_scraper.py  enhanced_scraper_with_summaries.py  enhanced_website_generator.py  final_verification.py  fix_database_class.py  fix_makefile.py  generate_static_website.py  index.html  inspection_report.json  integrated_ballot_system.py  integrated_pipeline.py  makefile_guide.md  merge_historical_data.py  migration_report_20250808_095812.json  pipeline_config.py  pyproject.toml  requirements.txt  run_complete_pipeline.py  run_python.sh  scraper.py  setup.py  setup.sh  setup_ballot_database.py  (+4 more)
scraper/data/: all_measures.csv  ballot_measures.db.pre_dedupe_backup.REMOVED.git-id  ceda_summary.json  current_measures.csv  db_connection_info.txt  enhanced_measures.csv  historical_measures.csv  latest_measures.json  merge_summary.txt  merged_ballot_measures.csv  output.json
scraper/dep/: ascii_ballot_measures.html  clean_ballot_measures.html  enhanced_ballot_measures_final.html
scraper/logs/: cleanup_report_20250808_101018.json
scraper/scripts/: check_updates.py  generate_site.py  initialize_db.py  migrate_to_new_structure.py  (+2 more)
(+55 files in other folders)
