[tool.poetry]
name = "ca-gov-scrapers"
version = "0.1.0"
description = "California Government Ballot Measures Scraper Suite"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "ca_gov_scrapers", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
click = "^8.1.0"
streamlit = "^1.28.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pandas = "^2.1.0"
plotly = "^5.17.0"
pydantic = "^2.4.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
lxml = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
isort = "^5.12.0"

[tool.poetry.scripts]
ca-scraper = "ca_gov_scrapers.interfaces.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
